--- a/index.html
+++ b/index.html
@@ -616,7 +616,10 @@
             const toggleActive = (id, e) => {
                 if (editingId === id) return;
                 const target = e.target;
+                if (!target) return;
+                // If the click is on a specific interactive element, don't toggle active state
                 if (target.closest('button') || target.closest('input') || target.closest('select')) return;
+                
                 setRegisters(registers.map(r => r.id === id ? { ...r, isActive: !r.isActive } : r));
             };
 
@@ -1201,7 +1204,7 @@
                             <div className="max-w-2xl mx-auto space-y-8">
                                 <div className="bg-white p-6 rounded-lg shadow border"><h2 className="text-lg font-bold mb-4 flex items-center gap-2"><Save size={20} /> バックアップ</h2><p className="text-sm text-gray-600 mb-4">現在のすべてのデータ（スタッフ、レジ設定、シフト履歴）をJSONファイルとしてダウンロードします。</p><button onClick={handleBackup} className="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700">バックアップをダウンロード</button></div>
                                 <div className="bg-white p-6 rounded-lg shadow border"><h2 className="text-lg font-bold mb-4 flex items-center gap-2"><History size={20} /> 復元</h2><p className="text-sm text-gray-600 mb-4">バックアップファイルを選択してデータを復元します。現在のデータは上書きされます。</p><input type="file" accept=".json" onChange={handleRestore} className="block w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100" /></div>
-                                <div className="bg-red-50 p-6 rounded-lg shadow border border-red-100"><h2 className="text-lg font-bold mb-4 flex items-center gap-2 text-red-700"><Trash2Icon size={20} /> データ初期化</h2><p className="text-sm text-red-600 mb-4">アプリのすべてのデータを消去し、初期状態（レジ1〜20号など）に戻します。</p><button onClick={handleReset} className="bg-red-600 text-white px-6 py-2 rounded hover:bg-red-700 border border-red-700">データを初期化する</button></div>
+                                <div className="bg-red-50 p-6 rounded-lg shadow border border-red-100"><h2 className="text-lg font-bold mb-4 flex items-center gap-2 text-red-700"><Trash2 size={20} /> データ初期化</h2><p className="text-sm text-red-600 mb-4">アプリのすべてのデータを消去し、初期状態（レジ1〜20号など）に戻します。</p><button onClick={handleReset} className="bg-red-600 text-white px-6 py-2 rounded hover:bg-red-700 border border-red-700">データを初期化する</button></div>
                             </div>
                         )}
                     </main>
@@ -1209,7 +1212,6 @@
             );
         }
 
-        const Trash2Icon = ({ size }) => (<svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M3 6h18" /><path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6" /><path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2" /><line x1="10" x2="10" y1="11" y2="17" /><line x1="14" x2="14" y1="11" y2="17" /></svg>);
         const TabButton = ({ active, onClick, icon, label }) => (<button onClick={onClick} className={`flex flex-col items-center justify-center gap-0.5 px-3 py-1.5 rounded-lg transition-all ${active ? 'bg-blue-50 text-blue-700 ring-1 ring-blue-200' : 'text-gray-500 hover:bg-gray-100 hover:text-gray-900'}`}>{icon}<span className="text-[10px] font-bold leading-none">{label}</span></button>);
 
         const root = ReactDOM.createRoot(document.getElementById('root'));
