--- a/index.html
+++ b/index.html
@@ -624,9 +624,18 @@
                         <h3 className="font-bold text-gray-700">登録スタッフ一覧 ({displayList.length}名)</h3>
                         <div className="flex gap-2">
                             <input type="file" ref={fileInputRef} accept=".csv" className="hidden" onChange={handleImportCSV} />
-                            <button onClick={() => fileInputRef.current?.click()} className="flex items-center gap-1 px-3 py-1.5 bg-gray-100 text-gray-700 rounded hover:bg-gray-200 border border-gray-300 text-sm"><Upload size={14} /> CSV読込</button>
-                            <button onClick={handleExportCSV} className="flex items-center gap-1 px-3 py-1.5 bg-gray-100 text-gray-700 rounded hover:bg-gray-200 border border-gray-300 text-sm"><FileText size={14} /> CSV出力</button>
-                            <button onClick={handleAdd} className="flex items-center gap-2 px-4 py-2 bg-green-600 text-white rounded-md hover:bg-green-700 transition-colors shadow-sm ml-2"><Plus size={18} /> 新規登録</button>
+                            
+                            {/* Modified Buttons for No Wrap and Smaller Text */}
+                            <button onClick={() => fileInputRef.current?.click()} className="flex items-center gap-1 px-3 py-1.5 bg-gray-100 text-gray-700 rounded hover:bg-gray-200 border border-gray-300 text-xs whitespace-nowrap">
+                                <Upload size={14} /> CSV読込
+                            </button>
+                            <button onClick={handleExportCSV} className="flex items-center gap-1 px-3 py-1.5 bg-gray-100 text-gray-700 rounded hover:bg-gray-200 border border-gray-300 text-xs whitespace-nowrap">
+                                <FileText size={14} /> CSV出力
+                            </button>
+                            <button onClick={handleAdd} className="flex items-center gap-2 px-4 py-2 bg-green-600 text-white rounded-md hover:bg-green-700 transition-colors shadow-sm ml-2 text-xs whitespace-nowrap">
+                                <Plus size={18} /> 新規登録
+                            </button>
+
                         </div>
                     </div>
                     <div className="overflow-x-auto">
@@ -1368,7 +1377,14 @@
         }
 
         const Trash2Icon = ({ size }) => (<svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M3 6h18" /><path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6" /><path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2" /><line x1="10" x2="10" y1="11" y2="17" /><line x1="14" x2="14" y1="11" y2="17" /></svg>);
-        const TabButton = ({ active, onClick, icon, label }) => (<button onClick={onClick} className={`flex flex-col items-center justify-center gap-0.5 px-3 py-1.5 rounded-lg transition-all ${active ? 'bg-blue-50 text-blue-700 ring-1 ring-blue-200' : 'text-gray-500 hover:bg-gray-100 hover:text-gray-900'}`}>{icon}<span className="text-[10px] font-bold leading-none">{label}</span></button>);
+        
+        // TabButton: フォントサイズを小さくし、改行を禁止
+        const TabButton = ({ active, onClick, icon, label }) => (
+            <button onClick={onClick} className={`flex flex-col items-center justify-center gap-0.5 px-3 py-1.5 rounded-lg transition-all ${active ? 'bg-blue-50 text-blue-700 ring-1 ring-blue-200' : 'text-gray-500 hover:bg-gray-100 hover:text-gray-900'}`}>
+                {icon}
+                <span className="text-[9px] font-bold leading-none whitespace-nowrap">{label}</span>
+            </button>
+        );
 
         const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<App />);
