--- a/index.html
+++ b/index.html
@@ -1041,10 +1041,12 @@
                 <div className="space-y-6">
                     <style>{`
                         @media print {
-                            @page { size: A4 landscape; margin: 3mm; }
+                            @page { size: A4 landscape; margin: 0; }
                             html, body {
                                 width: 100%;
                                 min-width: 1100px; /* iPhone対策: 横幅を強制して横向き縮小を促す */
+                                margin: 0;
+                                padding: 0;
                             }
                             body { 
                                 visibility: hidden; 
@@ -1061,14 +1063,21 @@
                                 top: 0 !important; 
                                 left: 0 !important; 
                                 width: 1122px !important; /* A4横幅相当の固定幅 */
-                                height: 100% !important;
+                                height: 100vh !important;
                                 background: white !important; 
                                 z-index: 2147483647 !important; 
-                                margin: 0 !important; 
-                                padding: 0 !important; 
-                                display: block !important; 
-                                overflow: visible !important; 
-                                zoom: var(--print-scale, 1); 
+                                
+                                /* マージン0にした分、パディングで余白確保 */
+                                padding: 10mm !important;
+                                box-sizing: border-box !important;
+
+                                display: flex !important;
+                                flex-direction: column !important;
+                                align-items: center !important;
+                                justify-content: flex-start !important;
+
+                                /* 全体を縮小して1ページに収める */
+                                zoom: 0.9 !important; 
                             }
 
                             .shift-table-container * { visibility: visible !important; }
@@ -1078,9 +1087,8 @@
                             .screen-table-row { display: none !important; }
 
                             .print-area { 
-                                width: 280mm; /* ピクセルではなくmm指定でA4横に強制 */
+                                width: 100% !important; /* コンテナ幅に合わせる */
                                 border-collapse: collapse; 
-                                font-size: 8.5px; /* 文字サイズを微調整 */
                                 table-layout: fixed; 
                                 border: 2px solid #000 !important;
                             }
@@ -1089,20 +1097,28 @@
                                 border: 1px solid #000 !important; 
                                 text-align: center; 
                                 vertical-align: middle; 
-                                padding: 0px 1px !important; /* 余白を極小に */
                                 white-space: nowrap; 
                                 overflow: hidden;
                                 text-overflow: ellipsis;
                                 color: #000 !important;
-                                height: auto !important;
                                 line-height: 1.1 !important;
                             }
 
+                            /* ヘッダー行（時間帯など） */
                             .print-area th { 
                                 background-color: #e5e7eb !important; 
                                 color: #000 !important; 
                                 font-weight: 800 !important; 
-                                font-size: 8.5px !important; 
+                                height: 35px !important; /* 高さを高く */
+                                font-size: 11px !important; 
+                                padding: 0 !important;
+                            }
+
+                            /* データ行 */
+                            .print-area td {
+                                font-size: 10px !important;
+                                padding: 0 1px !important;
+                                height: 24px !important; 
                             }
 
                             .print-area td[colspan] {
@@ -1115,13 +1131,14 @@
                             }
 
                             .print-header { 
-                                font-size: 14px; 
+                                width: 100%;
+                                text-align: center;
                                 font-weight: 900; 
-                                margin-bottom: 2px; 
-                                text-align: center; 
-                                padding-top: 5px; 
                                 color: #000;
                                 text-decoration: underline;
+                                font-size: 24px !important; /* 文字を大きく */
+                                margin-bottom: 15px !important; /* 余白を広げる */
+                                line-height: 1.5 !important;
                             }
 
                             tr { break-inside: avoid; page-break-inside: avoid; }
