--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
     <script type="text/babel" data-type="module" data-presets="typescript,react">
         import React, { useState, useEffect, useMemo, useRef } from 'react';
         import ReactDOM from 'react-dom/client';
+        // 修正: 'X' をインポートリストの最後に追加しました
         import { 
             Printer, RefreshCw, Settings, Clock, AlertCircle, ArrowLeftRight, 
             UserCheck, UserX, ChevronDown, ChevronUp, History, XCircle, Ban, 
             Users, Monitor, CalendarRange, Save, Database, Plus, Trash2, 
-            Edit2, GripVertical, Check, Badge, FileText, Upload, Layout, Smartphone 
+            Edit2, GripVertical, Check, Badge, FileText, Upload, Layout, Smartphone, X 
         } from 'lucide-react';
 
         // ==========================================
