--- a/index.html
+++ b/index.html
@@ -1054,23 +1054,11 @@
                     @media print {
                         @page { size: landscape; margin: 3mm; }
                         body { visibility: hidden; background: white !important; }
-                        
-                        /* Layout reset for printing */
-                        :root, body, #root, #root > div, main {
-                            height: auto !important;
-                            width: 100% !important;
-                            overflow: visible !important;
-                            display: block !important;
-                            margin: 0 !important;
-                            padding: 0 !important;
-                        }
-
                         button, nav, header, .sidebar, .no-print { display: none !important; }
                         body > *:not(#root) { display: none !important; }
-
                         .shift-table-container { 
                             visibility: visible !important; 
-                            position: absolute !important;
+                            position: fixed !important; 
                             top: 0 !important; 
                             left: 0 !important; 
                             width: 100vw !important; 
@@ -1084,6 +1072,7 @@
                             zoom: var(--print-scale, 1); 
                         }
                         .shift-table-container * { visibility: visible !important; }
+                        .no-print { display: none !important; }
                         .print-only { display: block !important; }
                         .print-table-row { display: table-row-group !important; }
                         .screen-table-row { display: none !important; }
